move the polling logic into a Service so as to not block the Main thread
move the polling logic into a Service so as to not block the Main thread

--- a/PackmanApp/AndroidManifest.xml
+++ b/PackmanApp/AndroidManifest.xml
@@ -44,7 +44,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="com.cs411.packman.GetPackagesService"></service>
+        <service android:name="com.cs411.packman.PullPackagesDataService"></service>
         <service android:name=".GCMIntentService" />
     </application>
 
